[package]
name = "atomicwrites"
version = "0.2.5"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["filesystem", "posix"]
readme = "README.md"

description = "Atomic file-writes."
documentation = "https://docs.rs/crate/atomicwrites"
homepage = "https://github.com/untitaker/rust-atomicwrites"
repository = "https://github.com/untitaker/rust-atomicwrites"

exclude = ["/.travis.yml", "/Makefile", "/appveyor.yml"]

[dependencies]
tempfile = {git="https://github.com/lengyijun/tempfile"}

[target.'cfg(unix)'.dependencies]
nix = {path="nix"}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs"] }
