[package]
name        = "nix"
description = "Rust friendly bindings to *nix APIs"
edition     = "2018"
version     = "0.17.0"
authors     = ["The nix-rust Project Developers"]
repository  = "https://github.com/nix-rust/nix"
license     = "MIT"
categories  = ["os::unix-apis"]
exclude     = [
  "/.gitignore",
  "/.travis.yml",
  "/ci/*",
  "/Cross.toml",
  "/RELEASE_PROCEDURE.md",
  "/bors.toml"
]

[target.'cfg(target_os = "dragonfly")'.build-dependencies]
cc = "1"

[dev-dependencies]
bytes = "0.4.8"
lazy_static = "1.2"
rand = "0.6"
tempfile = "3.0.5"
semver = "0.9.0"

[[test]]
name = "test"
path = "test/test.rs"

[[test]]
name = "test-aio-drop"
path = "test/sys/test_aio_drop.rs"

[[test]]
name = "test-clearenv"
path = "test/test_clearenv.rs"

[[test]]
name = "test-lio-listio-resubmit"
path = "test/sys/test_lio_listio_resubmit.rs"

[[test]]
name = "test-mount"
path = "test/test_mount.rs"
harness = false

[[test]]
name = "test-ptymaster-drop"
path = "test/test_ptymaster_drop.rs"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs"] }
sgx_libc = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
